--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "next-swagger-doc": "^0.4.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",,
+    "react-dom": "^18.0.0",,
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
