--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "next-auth": "^5.0.0-beta.25",
     "next-swagger-doc": "^0.4.1",
     "react": "^18.0.0",,
-    "react-dom": "^18.0.0",,
+    "react-dom": "^18.0.0",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
